--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,19 +25,19 @@ layout: compress
     </script>
   </head>
 
-<body class=" bg-white-100 font-sans">
-    <div class="flex-auto ">
+<body class=" bg-white-100 font-sans overflow-clip">
+    <div class="overflow-visible flex-auto ">
       <div class="flex-auto flex-col justify-center content-center">
         <div class="flex grow shrink-0 items-start">
-          <div class="flex grow shrink-0 self-start w-auto h-screen bg-top bg-no-repeat bg-contain" style="background-image: url(/assets/img/green-mat-1.png)">
-            <img class="invisible self-start" src="/assets/img/green-mat-1.png">
+          <div class="flex grow shrink-0 self-start w-auto h-screen bg-top bg-no-repeat bg-contain" style="background-image: url(images/green-mat-1.png)">
+            <img class="invisible self-start" src="images/green-mat-1.png">
           </div>
+        </div>
+        <div id="draggable" class="absolute inline w-fit h-fit">
+          <img class=" w-auto h-60 self-start" src="images/draggable-1.png">
         </div>
       </div>
     </div>
-    <
-    <div id="draggable" class="h-60 w-60 bg-top bg-no-repeat bg-contain" style="background-image: url(/assets/img/draggable-1.png)">
-      <div id="containment-wrapper" class=" h-screen items-center">
     </div>
 
     <main aria-label="Content">
