--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,6 @@ layout: compress
 
   {%- include footer.html -%}
 
-  <script src="{% link /assets/js/app.js %}"></script>
+  <script src="{% link assets/js/app.js %}"></script>
 </body>
 </html>
